Fixed the alignment on the very easy button

--- a/ClientApp/src/style/3-basics/_buttons.scss
+++ b/ClientApp/src/style/3-basics/_buttons.scss
@@ -72,6 +72,8 @@ input {
 
   background-color: $blue;
 
+  text-align: center;
+
   display: flex;
   justify-content: center;
   align-items: center;
