--- a/ClientApp/src/style/6-pages/_tutorial.scss
+++ b/ClientApp/src/style/6-pages/_tutorial.scss
@@ -33,6 +33,10 @@
     color: white;
   }
 
+  header {
+    padding: 24px;
+  }
+
   section {
     display: flex;
     flex-direction: column;
